# serializer version: 1
# name: test_entities[button][button.peblar_ev_charger_identify-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.peblar_ev_charger_identify',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.IDENTIFY: 'identify'>,
    'original_icon': None,
    'original_name': 'Identify',
    'platform': 'peblar',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '23-45-A4O-MOF_identify',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button][button.peblar_ev_charger_identify-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'identify',
      'friendly_name': 'Peblar EV Charger Identify',
    }),
    'context': <ANY>,
    'entity_id': 'button.peblar_ev_charger_identify',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button][button.peblar_ev_charger_restart-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.peblar_ev_charger_restart',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart',
    'platform': 'peblar',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '23-45-A4O-MOF_reboot',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button][button.peblar_ev_charger_restart-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'restart',
      'friendly_name': 'Peblar EV Charger Restart',
    }),
    'context': <ANY>,
    'entity_id': 'button.peblar_ev_charger_restart',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
